--- a/shortdb.bib
+++ b/shortdb.bib
@@ -28,6 +28,20 @@ and Uszkoreit, Hans},
  year = {2009}
 }
 
+@article{6936866,
+ author = {W. {Chen} and M. {Zhang} and Y. {Zhang}},
+ doi = {10.1109/TASLP.2014.2365359},
+ issn = {2329-9290},
+ journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+ keywords = {grammars;learning (artificial intelligence);natural language processing;trees (mathematics);English data sets;Chinese data sets;hidden-class representations;graph-based dependency parsing models;surrounding context representation;dependency trees;baseline system;sentence parsing;feature embeddings;word embeddings;borrowing terminologies;feature sparseness problem;distributed representation learning;distributed feature representations;Context;Adaptation models;Data models;Training;Vectors;Predictive models;Context modeling;Natural language processing;dependency parsing;feature embeddings;semi-supervised approach},
+ month = {March},
+ number = {3},
+ pages = {451-460},
+ title = {Distributed Feature Representations for Dependency Parsing},
+ volume = {23},
+ year = {2015}
+}
+
 @article{6998838,
  author = {G. Mesnil and Y. Dauphin and K. Yao and Y. Bengio and L. Deng and D. Hakkani-Tur and X. He and L. Heck and G. Tur and D. Yu and G. Zweig},
  doi = {10.1109/TASLP.2014.2383614},
