--- a/db.bib
+++ b/db.bib
@@ -4155,6 +4155,14 @@ our model and the datasets available for general use.},
  year = {2005}
 }
 
+@inproceedings{tenney2018what,
+ author = {Ian Tenney and Patrick Xia and Berlin Chen and Alex Wang and Adam Poliak and R Thomas McCoy and Najoung Kim and Benjamin Van Durme and Sam Bowman and Dipanjan Das and Ellie Pavlick},
+ booktitle = {International Conference on Learning Representations},
+ title = {What do you learn from context? Probing for sentence structure in contextualized word representations},
+ url = {https://openreview.net/forum?id=SJzSgnRcKX},
+ year = {2019}
+}
+
 @inproceedings{tira,
  address = {Berlin Heidelberg New York},
  author = {Martin Potthast and Tim Gollub and Francisco Rangel and Paolo Rosso and Efstathios Stamatatos and Benno Stein},
