--- a/db.bib
+++ b/db.bib
@@ -3334,6 +3334,20 @@ and Satta, Giorgio},
  year = {2018}
 }
 
+@inproceedings{P18-1249,
+ abstract = {We demonstrate that replacing an LSTM encoder with a self-attentive architecture can lead to improvements to a state-of-the-art discriminative constituency parser. The use of attention makes explicit the manner in which information is propagated between different locations in the sentence, which we use to both analyze our model and propose potential improvements. For example, we find that separating positional and content information in the encoder can lead to improved parsing accuracy. Additionally, we evaluate different approaches for lexical representation. Our parser achieves new state-of-the-art results for single models trained on the Penn Treebank: 93.55 F1 without the use of any external data, and 95.13 F1 when using pre-trained word representations. Our parser also outperforms the previous best-published accuracy figures on 8 of the 9 languages in the SPMRL dataset.},
+ address = {Melbourne, Australia},
+ author = {Kitaev, Nikita  and
+Klein, Dan},
+ booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ month = {jul},
+ pages = {2676--2686},
+ publisher = {Association for Computational Linguistics},
+ title = {Constituency Parsing with a Self-Attentive Encoder},
+ url = {http://www.aclweb.org/anthology/P18-1249},
+ year = {2018}
+}
+
 @inproceedings{pan-EtAl:2015:NAACL-HLT,
  address = {Denver, Colorado},
  author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
