--- a/db.bib
+++ b/db.bib
@@ -2289,6 +2289,20 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2014}
 }
 
+@inproceedings{Kim:2016:CNL:3016100.3016285,
+ acmid = {3016285},
+ author = {Kim, Yoon and Jernite, Yacine and Sontag, David and Rush, Alexander M.},
+ booktitle = {Proceedings of the Thirtieth AAAI Conference on Artificial Intelligence},
+ location = {Phoenix, Arizona},
+ numpages = {9},
+ pages = {2741--2749},
+ publisher = {AAAI Press},
+ series = {AAAI'16},
+ title = {Character-aware Neural Language Models},
+ url = {http://dl.acm.org/citation.cfm?id=3016100.3016285},
+ year = {2016}
+}
+
 @inproceedings{klein-EtAl:2017:ACL-2017-System-Demonstrations,
  address = {Vancouver, Canada},
  author = {Klein, Guillaume  and  Kim, Yoon  and  Deng, Yuntian  and  Senellart, Jean  and  Rush, Alexander},
