--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2020,6 +2020,19 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2014}
 }
 
+@inproceedings{Kim:2016:CNL:3016100.3016285,
+ acmid = {3016285},
+ author = {Kim, Yoon and Jernite, Yacine and Sontag, David and Rush, Alexander M.},
+ booktitle = {Proc. of the Thirtieth AAAI Conference on Artificial Intelligence},
+ location = {Phoenix, Arizona},
+ numpages = {9},
+ publisher = {AAAI Press},
+ series = {AAAI'16},
+ title = {Character-aware Neural Language Models},
+ url = {http://dl.acm.org/citation.cfm?id=3016100.3016285},
+ year = {2016}
+}
+
 @inproceedings{klein-EtAl:2017:ACL-2017-System-Demonstrations,
  author = {Klein, Guillaume  and  Kim, Yoon  and  Deng, Yuntian  and  Senellart, Jean  and  Rush, Alexander},
  booktitle = {Proc. of ACL 2017, System Demonstrations},
