--- a/db.bib
+++ b/db.bib
@@ -417,6 +417,19 @@ languages.},
  year = {2010}
 }
 
+@inproceedings{Botha:2014:CMW:3044805.3045104,
+ acmid = {3045104},
+ author = {Botha, Jan A. and Blunsom, Phil},
+ booktitle = {Proceedings of the 31st International Conference on International Conference on Machine Learning - Volume 32},
+ location = {Beijing, China},
+ pages = {II-1899--II-1907},
+ publisher = {JMLR.org},
+ series = {ICML'14},
+ title = {Compositional Morphology for Word Representations and Language Modelling},
+ url = {http://dl.acm.org/citation.cfm?id=3044805.3045104},
+ year = {2014}
+}
+
 @inproceedings{bottou-91c,
  address = {Nimes, France},
  author = {Bottou, {L\'eon}},
