--- a/shortdb.bib
+++ b/shortdb.bib
@@ -364,6 +364,18 @@ languages.},
  year = {2010}
 }
 
+@inproceedings{Botha:2014:CMW:3044805.3045104,
+ acmid = {3045104},
+ author = {Botha, Jan A. and Blunsom, Phil},
+ booktitle = {Proc. of ICML '14},
+ location = {Beijing, China},
+ publisher = {JMLR.org},
+ series = {ICML'14},
+ title = {Compositional Morphology for Word Representations and Language Modelling},
+ url = {http://dl.acm.org/citation.cfm?id=3044805.3045104},
+ year = {2014}
+}
+
 @inproceedings{bottou-91c,
  author = {Bottou, {L\'eon}},
  booktitle = {Proc. of Neuro-N\^imes 91},
