--- a/db.bib
+++ b/db.bib
@@ -2794,6 +2794,18 @@ with fewer features.},
  year = {2015}
 }
 
+@inproceedings{luong-socher-manning:2013:CoNLL-2013,
+ address = {Sofia, Bulgaria},
+ author = {Luong, Thang  and  Socher, Richard  and  Manning, Christopher},
+ booktitle = {Proceedings of the Seventeenth Conference on Computational Natural Language Learning},
+ month = {August},
+ pages = {104--113},
+ publisher = {Association for Computational Linguistics},
+ title = {Better Word Representations with Recursive Neural Networks for Morphology},
+ url = {http://www.aclweb.org/anthology/W13-3512},
+ year = {2013}
+}
+
 @inproceedings{ma-ganchev-weiss:2018:EMNLP,
  address = {Brussels, Belgium},
  author = {Ma, Ji  and  Ganchev, Kuzman  and  Weiss, David},
