--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2167,6 +2167,14 @@ with fewer features.},
  year = {2015}
 }
 
+@inproceedings{luong-socher-manning:2013:CoNLL-2013,
+ author = {Luong, Thang  and  Socher, Richard  and  Manning, Christopher},
+ booktitle = {Proc. of CoNLL},
+ title = {Better Word Representations with Recursive Neural Networks for Morphology},
+ url = {http://www.aclweb.org/anthology/W13-3512},
+ year = {2013}
+}
+
 @inproceedings{ma-ganchev-weiss:2018:EMNLP,
  author = {Ma, Ji  and  Ganchev, Kuzman  and  Weiss, David},
  booktitle = {Proc. of EMNLP},
