--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2393,6 +2393,18 @@ and Zettlemoyer, Luke},
  year = {2018}
 }
 
+@inproceedings{N18-2074,
+ abstract = {Relying entirely on an attention mechanism, the Transformer introduced by Vaswani et al. (2017) achieves state-of-the-art results for machine translation. In contrast to recurrent and convolutional neural networks, it does not explicitly model relative or absolute position information in its structure. Instead, it requires adding representations of absolute positions to its inputs. In this work we present an alternative approach, extending the self-attention mechanism to efficiently consider representations of the relative positions, or distances between sequence elements. On the WMT 2014 English-to-German and English-to-French translation tasks, this approach yields improvements of 1.3 BLEU and 0.3 BLEU over absolute position representations, respectively. Notably, we observe that combining relative and absolute position representations yields no further improvement in translation quality. We describe an efficient implementation of our method and cast it as an instance of relation-aware self-attention mechanisms that can generalize to arbitrary graph-labeled inputs.},
+ author = {Shaw, Peter  and
+Uszkoreit, Jakob  and
+Vaswani, Ashish},
+ booktitle = {Proc. of NAACL},
+ doi = {10.18653/v1/N18-2074},
+ title = {Self-Attention with Relative Position Representations},
+ url = {https://www.aclweb.org/anthology/N18-2074},
+ year = {2018}
+}
+
 @inproceedings{narasimhan-kulkarni-barzilay:2015:EMNLP,
  author = {Narasimhan, Karthik  and  Kulkarni, Tejas  and  Barzilay, Regina},
  booktitle = {Proc. of EMNLP},
