--- a/tinydb.bib
+++ b/tinydb.bib
@@ -997,6 +997,23 @@ Baskaran Sankaran},
  year = {2017}
 }
 
+@article{DBLP:journals/corr/HeZRS15,
+ archiveprefix = {arXiv},
+ author = {Kaiming He and
+Xiangyu Zhang and
+Shaoqing Ren and
+Jian Sun},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/HeZRS15},
+ eprint = {1512.03385},
+ journal = {CoRR},
+ timestamp = {Mon, 13 Aug 2018 16:46:56 +0200},
+ title = {Deep Residual Learning for Image Recognition},
+ url = {http://arxiv.org/abs/1512.03385},
+ volume = {abs/1512.03385},
+ year = {2015}
+}
+
 @article{DBLP:journals/corr/HintonVD15,
  author = {Geoffrey E. Hinton and
 Oriol Vinyals and
