--- a/db.bib
+++ b/db.bib
@@ -4386,6 +4386,25 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {1996}
 }
 
+@inproceedings{W13-3516,
+ address = {Sofia, Bulgaria},
+ author = {Pradhan, Sameer  and
+Moschitti, Alessandro  and
+Xue, Nianwen  and
+Ng, Hwee Tou  and
+Bj{\"o}rkelund, Anders  and
+Uryupina, Olga  and
+Zhang, Yuchen  and
+Zhong, Zhi},
+ booktitle = {Proceedings of the Seventeenth Conference on Computational Natural Language Learning},
+ month = {aug},
+ pages = {143--152},
+ publisher = {Association for Computational Linguistics},
+ title = {Towards Robust Linguistic Analysis using OntoNotes},
+ url = {https://www.aclweb.org/anthology/W13-3516},
+ year = {2013}
+}
+
 @book{wals,
  address = {Leipzig},
  editor = {Matthew S. Dryer and Martin Haspelmath},
