--- a/db.bib
+++ b/db.bib
@@ -4405,6 +4405,25 @@ Zhong, Zhi},
  year = {2013}
 }
 
+@inproceedings{W18-2501,
+ author = {Gardner, Matt
+and Grus, Joel
+and Neumann, Mark
+and Tafjord, Oyvind
+and Dasigi, Pradeep
+and F. Liu, Nelson
+and Peters, Matthew
+and Schmitz, Michael
+and Zettlemoyer, Luke},
+ booktitle = {Proceedings of Workshop for NLP Open Source Software (NLP-OSS)},
+ location = {Melbourne, Australia},
+ pages = {1--6},
+ publisher = {Association for Computational Linguistics},
+ title = {AllenNLP: A Deep Semantic Natural Language Processing Platform},
+ url = {http://aclweb.org/anthology/W18-2501},
+ year = {2018}
+}
+
 @book{wals,
  address = {Leipzig},
  editor = {Matthew S. Dryer and Martin Haspelmath},
