--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3476,6 +3476,23 @@ Zhong, Zhi},
  year = {2013}
 }
 
+@inproceedings{W18-2501,
+ author = {Gardner, Matt
+and Grus, Joel
+and Neumann, Mark
+and Tafjord, Oyvind
+and Dasigi, Pradeep
+and F. Liu, Nelson
+and Peters, Matthew
+and Schmitz, Michael
+and Zettlemoyer, Luke},
+ booktitle = {Proc. of Workshop for NLP Open Source Software (NLP-OSS)},
+ location = {Melbourne, Australia},
+ title = {AllenNLP: A Deep Semantic Natural Language Processing Platform},
+ url = {http://aclweb.org/anthology/W18-2501},
+ year = {2018}
+}
+
 @book{wals,
  address = {Leipzig},
  editor = {Matthew S. Dryer and Martin Haspelmath},
