--- a/db.bib
+++ b/db.bib
@@ -3042,6 +3042,22 @@ and Smith, Noah A.},
  year = {2018}
 }
 
+@inproceedings{N18-1089,
+ abstract = {Adversarial training (AT) is a powerful regularization method for neural networks, aiming to achieve robustness to input perturbations. Yet, the specific effects of the robustness obtained from AT are still unclear in the context of natural language processing. In this paper, we propose and analyze a neural POS tagging model that exploits AT. In our experiments on the Penn Treebank WSJ corpus and the Universal Dependencies (UD) dataset (27 languages), we find that AT not only improves the overall tagging accuracy, but also 1) prevents over-fitting well in low resource languages and 2) boosts tagging accuracy for rare / unseen words. We also demonstrate that 3) the improved tagging performance by AT contributes to the downstream task of dependency parsing, and that 4) AT helps the model to learn cleaner word representations. 5) The proposed AT model is generally effective in different sequence labeling tasks. These positive results motivate further use of AT for natural language tasks.},
+ address = {New Orleans, Louisiana},
+ author = {Yasunaga, Michihiro  and
+Kasai, Jungo  and
+Radev, Dragomir},
+ booktitle = {Proceedings of the 2018 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long Papers)},
+ doi = {10.18653/v1/N18-1089},
+ month = {jun},
+ pages = {976--986},
+ publisher = {Association for Computational Linguistics},
+ title = {Robust Multilingual Part-of-Speech Tagging via Adversarial Training},
+ url = {https://www.aclweb.org/anthology/N18-1089},
+ year = {2018}
+}
+
 @inproceedings{N18-1202,
  author = {Peters, Matthew
 and Neumann, Mark
