--- a/db.bib
+++ b/db.bib
@@ -893,6 +893,22 @@ single-criterion learning. Source codes of this paper are available on Github.},
  year = {2016}
 }
 
+@inproceedings{D17-1182,
+ abstract = {Neural networks have shown promising results for relation extraction. State-of-the-art models cast the task as an end-to-end problem, solved incrementally using a local classifier. Yet previous work using statistical models have demonstrated that global optimization can achieve better performances compared to local classification. We build a globally optimized neural model for end-to-end relation extraction, proposing novel LSTM features in order to better learn context representations. In addition, we present a novel method to integrate syntactic information to facilitate global learning, yet requiring little background on syntactic grammars thus being easy to extend. Experimental results show that our proposed model is highly effective, achieving the best performances on two standard benchmarks.},
+ address = {Copenhagen, Denmark},
+ author = {Zhang, Meishan  and
+Zhang, Yue  and
+Fu, Guohong},
+ booktitle = {Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+ doi = {10.18653/v1/D17-1182},
+ month = {sep},
+ pages = {1730--1740},
+ publisher = {Association for Computational Linguistics},
+ title = {End-to-End Neural Relation Extraction with Global Optimization},
+ url = {https://www.aclweb.org/anthology/D17-1182},
+ year = {2017}
+}
+
 @inproceedings{damonte-cohen-satta:2017:EACLlong,
  abstract = {Abstract Meaning Representation (AMR) is a semantic representation for natural
 language that embeds annotations related to traditional tasks such as named
