--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3485,6 +3485,18 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {1996}
 }
 
+@inproceedings{W12-4501,
+ author = {Pradhan, Sameer  and
+Moschitti, Alessandro  and
+Xue, Nianwen  and
+Uryupina, Olga  and
+Zhang, Yuchen},
+ booktitle = {Joint Conference on EMNLP and CoNLL - Shared Task},
+ title = {CoNLL-2012 Shared Task: Modeling Multilingual Unrestricted Coreference in OntoNotes},
+ url = {https://www.aclweb.org/anthology/W12-4501},
+ year = {2012}
+}
+
 @inproceedings{W13-3516,
  author = {Pradhan, Sameer  and
 Moschitti, Alessandro  and
