--- a/db.bib
+++ b/db.bib
@@ -4418,6 +4418,22 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {1996}
 }
 
+@inproceedings{W12-4501,
+ address = {Jeju Island, Korea},
+ author = {Pradhan, Sameer  and
+Moschitti, Alessandro  and
+Xue, Nianwen  and
+Uryupina, Olga  and
+Zhang, Yuchen},
+ booktitle = {Joint Conference on EMNLP and CoNLL - Shared Task},
+ month = {jul},
+ pages = {1--40},
+ publisher = {Association for Computational Linguistics},
+ title = {CoNLL-2012 Shared Task: Modeling Multilingual Unrestricted Coreference in OntoNotes},
+ url = {https://www.aclweb.org/anthology/W12-4501},
+ year = {2012}
+}
+
 @inproceedings{W13-3516,
  address = {Sofia, Bulgaria},
  author = {Pradhan, Sameer  and
