--- a/db.bib
+++ b/db.bib
@@ -4418,6 +4418,19 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {1996}
 }
 
+@inproceedings{W04-3212,
+ address = {Barcelona, Spain},
+ author = {Xue, Nianwen  and
+Palmer, Martha},
+ booktitle = {Proceedings of EMNLP 2004},
+ month = {jul},
+ pages = {88--94},
+ publisher = {Association for Computational Linguistics},
+ title = {Calibrating Features for Semantic Role Labeling},
+ url = {https://www.aclweb.org/anthology/W04-3212},
+ year = {2004}
+}
+
 @inproceedings{W12-4501,
  address = {Jeju Island, Korea},
  author = {Pradhan, Sameer  and
