--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3485,6 +3485,15 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {1996}
 }
 
+@inproceedings{W04-3212,
+ author = {Xue, Nianwen  and
+Palmer, Martha},
+ booktitle = {Proc. of EMNLP 2004},
+ title = {Calibrating Features for Semantic Role Labeling},
+ url = {https://www.aclweb.org/anthology/W04-3212},
+ year = {2004}
+}
+
 @inproceedings{W12-4501,
  author = {Pradhan, Sameer  and
 Moschitti, Alessandro  and
