--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2078,6 +2078,15 @@ with fewer features.},
  year = {2014}
 }
 
+@misc{li2019efficient,
+ archiveprefix = {arXiv},
+ author = {Liunian Harold Li and Patrick H. Chen and Cho-Jui Hsieh and Kai-Wei Chang},
+ eprint = {1902.11269},
+ primaryclass = {cs.CL},
+ title = {Efficient Contextual Representation Learning Without Softmax Layer},
+ year = {2019}
+}
+
 @article{Li:2009:PIA:1667988.1667992,
  acmid = {1667992},
  author = {Li, Zhongguo and Sun, Maosong},
