--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1491,6 +1491,16 @@ An Exploration},
  year = {1996}
 }
 
+@article{Elman90findingstructure,
+ author = {Jeffrey L. Elman},
+ journal = {COGNITIVE SCIENCE},
+ number = {2},
+ pages = {179--211},
+ title = {Finding structure in time},
+ volume = {14},
+ year = {1990}
+}
+
 @article{Erhan:2010:WUP:1756006.1756025,
  acmid = {1756025},
  author = {Erhan, Dumitru and Bengio, Yoshua and Courville, Aaron and Manzagol, Pierre-Antoine and Vincent, Pascal and Bengio, Samy},
