--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1125,6 +1125,23 @@ Modeling},
  year = {2018}
 }
 
+@article{DBLP:journals/corr/abs-1903-05987,
+ archiveprefix = {arXiv},
+ author = {Matthew Peters and
+Sebastian Ruder and
+Noah A. Smith},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1903-05987},
+ eprint = {1903.05987},
+ journal = {CoRR},
+ timestamp = {Sun, 31 Mar 2019 19:01:24 +0200},
+ title = {To Tune or Not to Tune? Adapting Pretrained Representations to Diverse
+Tasks},
+ url = {http://arxiv.org/abs/1903.05987},
+ volume = {abs/1903.05987},
+ year = {2019}
+}
+
 @article{DBLP:journals/corr/BahdanauCB14,
  archiveprefix = {arXiv},
  author = {Dzmitry Bahdanau and
