--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1070,6 +1070,22 @@ Jeffrey Dean},
  year = {2015}
 }
 
+@article{DBLP:journals/corr/HuangLW16a,
+ archiveprefix = {arXiv},
+ author = {Gao Huang and
+Zhuang Liu and
+Kilian Q. Weinberger},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/HuangLW16a},
+ eprint = {1608.06993},
+ journal = {CoRR},
+ timestamp = {Mon, 10 Sep 2018 15:49:32 +0200},
+ title = {Densely Connected Convolutional Networks},
+ url = {http://arxiv.org/abs/1608.06993},
+ volume = {abs/1608.06993},
+ year = {2016}
+}
+
 @article{DBLP:journals/corr/HuangXY15,
  author = {Zhiheng Huang and
 Wei Xu and
