--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2765,6 +2765,20 @@ and Titov, Ivan},
  year = {2018}
 }
 
+@inproceedings{P18-1130,
+ abstract = {We introduce a novel architecture for dependency parsing: stack-pointer networks (StackPtr). Combining pointer networks (Vinyals et al., 2015) with an internal stack, the proposed model first reads and encodes the whole sentence, then builds the dependency tree top-down (from root-to-leaf) in a depth-first fashion. The stack tracks the status of the depth-first search and the pointer networks select one child for the word at the top of the stack at each step. The StackPtr parser benefits from the information of whole sentence and all previously derived subtree structures, and removes the left-to-right restriction in classical transition-based parsers. Yet the number of steps for building any (non-projective) parse tree is linear in the length of the sentence just as other transition-based parsers, yielding an efficient decoding algorithm with $O(n{\textasciicircum}2)$ time complexity. We evaluate our model on 29 treebanks spanning 20 languages and different dependency annotation schemas, and achieve state-of-the-art performances on 21 of them},
+ author = {Ma, Xuezhe  and
+Hu, Zecong  and
+Liu, Jingzhou  and
+Peng, Nanyun  and
+Neubig, Graham  and
+Hovy, Eduard},
+ booktitle = {Proc. of ACL},
+ title = {Stack-Pointer Networks for Dependency Parsing},
+ url = {https://www.aclweb.org/anthology/P18-1130},
+ year = {2018}
+}
+
 @inproceedings{P18-1171,
  author = {Peng, Xiaochang
 and Song, Linfeng
