--- a/db.bib
+++ b/db.bib
@@ -3829,6 +3829,21 @@ and task specific gazetteers.},
  year = {2015}
 }
 
+@article{Q17-1010,
+ abstract = {Continuous word representations, trained on large unlabeled corpora are useful for many natural language processing tasks. Popular models to learn such representations ignore the morphology of words, by assigning a distinct vector to each word. This is a limitation, especially for languages with large vocabularies and many rare words. In this paper, we propose a new approach based on the skipgram model, where each word is represented as a bag of character n-grams. A vector representation is associated to each character n-gram, words being represented as the sum of these representations. Our method is fast, allowing to train models on large corpora quickly and allows to compute word representations for words that did not appear in the training data. We evaluate our word representations on nine different languages, both on word similarity and analogy tasks. By comparing to recently proposed morphological word representations, we show that our vectors achieve state-of-the-art performance on these tasks.},
+ author = {Bojanowski, Piotr  and
+Grave, Edouard  and
+Joulin, Armand  and
+Mikolov, Tomas},
+ journal = {Transactions of the Association for Computational Linguistics},
+ number = {1},
+ pages = {135--146},
+ title = {Enriching Word Vectors with Subword Information},
+ url = {https://www.aclweb.org/anthology/Q17-1010},
+ volume = {5},
+ year = {2017}
+}
+
 @inproceedings{rajpurkar-EtAl:2016:EMNLP2016,
  address = {Austin, Texas},
  author = {Rajpurkar, Pranav  and  Zhang, Jian  and  Lopyrev, Konstantin  and  Liang, Percy},
