--- a/db.bib
+++ b/db.bib
@@ -2359,6 +2359,19 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2018}
 }
 
+@inproceedings{K18-2020,
+ abstract = {UDPipe is a trainable pipeline which performs sentence segmentation, tokenization, POS tagging, lemmatization and dependency parsing. We present a prototype for UDPipe 2.0 and evaluate it in the CoNLL 2018 UD Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies, which employs three metrics for submission ranking. Out of 26 participants, the prototype placed first in the MLAS ranking, third in the LAS ranking and third in the BLEX ranking. In extrinsic parser evaluation EPE 2018, the system ranked first in the overall score.},
+ address = {Brussels, Belgium},
+ author = {Straka, Milan},
+ booktitle = {Proceedings of the {CoNLL} 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ month = {oct},
+ pages = {197--207},
+ publisher = {Association for Computational Linguistics},
+ title = {{UDPipe} 2.0 Prototype at {CoNLL} 2018 {UD} Shared Task},
+ url = {https://www.aclweb.org/anthology/K18-2020},
+ year = {2018}
+}
+
 @inproceedings{kalchbrenner-grefenstette-blunsom:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Kalchbrenner, Nal  and  Grefenstette, Edward  and  Blunsom, Phil},
