--- a/db.bib
+++ b/db.bib
@@ -1285,6 +1285,20 @@ Tasks},
  year = {2019}
 }
 
+@article{DBLP:journals/corr/abs-1904-02099,
+ archiveprefix = {arXiv},
+ author = {Daniel Kondratyuk},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1904-02099},
+ eprint = {1904.02099},
+ journal = {CoRR},
+ timestamp = {Sun, 31 Mar 2019 19:01:24 +0200},
+ title = {75 Languages, 1 Model: Parsing Universal Dependencies Universally},
+ url = {http://arxiv.org/abs/1904.02099},
+ volume = {abs/1904.02099},
+ year = {2019}
+}
+
 @article{DBLP:journals/corr/BahdanauCB14,
  archiveprefix = {arXiv},
  author = {Dzmitry Bahdanau and
