--- a/tinydb.bib
+++ b/tinydb.bib
@@ -794,6 +794,22 @@ Marcu, Daniel},
  year = {2011}
 }
 
+@inproceedings{DBLP:journals/corr/abs-1301-3781,
+ author = {Tomas Mikolov and
+Kai Chen and
+Greg Corrado and
+Jeffrey Dean},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1301-3781},
+ booktitle = {1st International Conference on Learning Representations, {ICLR} 2013,
+Scottsdale, Arizona, USA, May 2-4, 2013, Workshop Track Proc.},
+ crossref = {DBLP:conf/iclr/2013w},
+ timestamp = {Thu, 04 Apr 2019 13:20:08 +0200},
+ title = {Efficient Estimation of Word Representations in Vector Space},
+ url = {http://arxiv.org/abs/1301.3781},
+ year = {2013}
+}
+
 @article{DBLP:journals/corr/abs-1709-03756,
  archiveprefix = {arXiv},
  author = {Yan Shao},
