--- a/db.bib
+++ b/db.bib
@@ -1817,6 +1817,19 @@ An Exploration},
  year = {2008}
 }
 
+@inproceedings{finkel-manning-2009-joint,
+ address = {Boulder, Colorado},
+ author = {Finkel, Jenny Rose  and
+Manning, Christopher D.},
+ booktitle = {Proceedings of Human Language Technologies: The 2009 Annual Conference of the North American Chapter of the Association for Computational Linguistics},
+ month = {jun},
+ pages = {326--334},
+ publisher = {Association for Computational Linguistics},
+ title = {Joint Parsing and Named Entity Recognition},
+ url = {https://www.aclweb.org/anthology/N09-1037},
+ year = {2009}
+}
+
 @article{firth57synopsis,
  abstract = {Reprinted in:  Palmer, F. R. (ed.) (1968). Selected Papers of J. R. Firth 1952-59, pages 168-205. Longmans, London.},
  added-at = {2008-05-14T00:52:58.000+0200},
