--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1639,6 +1639,16 @@ An Exploration},
  year = {2008}
 }
 
+@inproceedings{finkel-manning-2009-joint,
+ author = {Finkel, Jenny Rose  and
+Manning, Christopher D.},
+ booktitle = {Proc. of NAACL-2009},
+ publisher = {ACL},
+ title = {Joint Parsing and Named Entity Recognition},
+ url = {https://www.aclweb.org/anthology/N09-1037},
+ year = {2009}
+}
+
 @article{firth57synopsis,
  abstract = {Reprinted in:  Palmer, F. R. (ed.) (1968). Selected Papers of J. R. Firth 1952-59, pages 168-205. Longmans, London.},
  added-at = {2008-05-14T00:52:58.000+0200},
