--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1493,6 +1493,15 @@ An Exploration},
  year = {2010}
 }
 
+@inproceedings{finkel-manning-2009-joint,
+ author = {Finkel, Jenny Rose  and
+Manning, Christopher D.},
+ booktitle = {Proc. of NAACL},
+ title = {Joint Parsing and Named Entity Recognition},
+ url = {https://www.aclweb.org/anthology/N09-1037},
+ year = {2009}
+}
+
 @article{firth57synopsis,
  abstract = {Reprinted in:  Palmer, F. R. (ed.) (1968). Selected Papers of J. R. Firth 1952-59, pages 168-205. Longmans, London.},
  added-at = {2008-05-14T00:52:58.000+0200},
