--- a/db.bib
+++ b/db.bib
@@ -2702,6 +2702,20 @@ with fewer features.},
  year = {2015}
 }
 
+@inproceedings{li-etal-2010-joint,
+ address = {Uppsala, Sweden},
+ author = {Li, Junhui  and
+Zhou, Guodong  and
+Ng, Hwee Tou},
+ booktitle = {Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
+ month = {jul},
+ pages = {1108--1117},
+ publisher = {Association for Computational Linguistics},
+ title = {Joint Syntactic and Semantic Parsing of Chinese},
+ url = {https://www.aclweb.org/anthology/P10-1113},
+ year = {2010}
+}
+
 @inproceedings{li-zhang-chen:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
