--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2154,6 +2154,16 @@ with fewer features.},
  year = {2015}
 }
 
+@inproceedings{li-etal-2010-joint,
+ author = {Li, Junhui  and
+Zhou, Guodong  and
+Ng, Hwee Tou},
+ booktitle = {Proc. of ACL},
+ title = {Joint Syntactic and Semantic Parsing of Chinese},
+ url = {https://www.aclweb.org/anthology/P10-1113},
+ year = {2010}
+}
+
 @inproceedings{li-EtAl:2016:EMNLP20162,
  author = {Li, Jiwei  and  Monroe, Will  and  Ritter, Alan  and  Jurafsky, Dan  and  Galley, Michel  and  Gao, Jianfeng},
  booktitle = {Proc. of EMNLP},
