--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2367,6 +2367,17 @@ with fewer features.},
  year = {2015}
 }
 
+@inproceedings{li-etal-2010-joint,
+ author = {Li, Junhui  and
+Zhou, Guodong  and
+Ng, Hwee Tou},
+ booktitle = {Proc. of ACL-2010},
+ publisher = {ACL},
+ title = {Joint Syntactic and Semantic Parsing of Chinese},
+ url = {https://www.aclweb.org/anthology/P10-1113},
+ year = {2010}
+}
+
 @inproceedings{li-zhang-chen:2014:P14-1,
  author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
  booktitle = {Proc. of ACL-2014},
