--- a/db.bib
+++ b/db.bib
@@ -1675,6 +1675,18 @@ score (76.30%), and content word labeled attachment score (72.57%).},
  year = {2015}
 }
 
+@inproceedings{dyer-2009-using,
+ address = {Boulder, Colorado},
+ author = {Dyer, Chris},
+ booktitle = {Proceedings of Human Language Technologies: The 2009 Annual Conference of the North American Chapter of the Association for Computational Linguistics},
+ month = {jun},
+ pages = {406--414},
+ publisher = {Association for Computational Linguistics},
+ title = {Using a maximum entropy model to build segmentation lattices for MT},
+ url = {https://www.aclweb.org/anthology/N09-1046},
+ year = {2009}
+}
+
 @inproceedings{dyer-EtAl:2015:ACL-IJCNLP,
  address = {Beijing, China},
  author = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
