--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1412,6 +1412,14 @@ score (76.30%), and content word labeled attachment score (72.57%).},
  year = {2017}
 }
 
+@inproceedings{dyer-2009-using,
+ author = {Dyer, Chris},
+ booktitle = {Proc. of NAACL},
+ title = {Using a maximum entropy model to build segmentation lattices for MT},
+ url = {https://www.aclweb.org/anthology/N09-1046},
+ year = {2009}
+}
+
 @inproceedings{dyer-EtAl:2015:ACL-IJCNLP,
  author = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
  booktitle = {Proc. of ACL},
