--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1520,6 +1520,15 @@ score (76.30%), and content word labeled attachment score (72.57%).},
  year = {2015}
 }
 
+@inproceedings{dyer-2009-using,
+ author = {Dyer, Chris},
+ booktitle = {Proc. of NAACL-2009},
+ publisher = {ACL},
+ title = {Using a maximum entropy model to build segmentation lattices for MT},
+ url = {https://www.aclweb.org/anthology/N09-1046},
+ year = {2009}
+}
+
 @inproceedings{dyer-EtAl:2015:ACL-IJCNLP,
  author = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
  booktitle = {Proc. of ACL'15},
