--- a/tinydb.bib
+++ b/tinydb.bib
@@ -84,6 +84,17 @@ and Clark, Peter E.},
  year = {2005}
 }
 
+@inproceedings{aharoni-goldberg-2017-towards,
+ abstract = {We present a simple method to incorporate syntactic information about the target language in a neural machine translation system by translating into linearized, lexicalized constituency trees. An experiment on the WMT16 German-English news translation task resulted in an improved BLEU score when compared to a syntax-agnostic NMT baseline trained on the same dataset. An analysis of the translations from the syntax-aware system shows that it performs more reordering during translation in comparison to the baseline. A small-scale human evaluation also showed an advantage to the syntax-aware system.},
+ author = {Aharoni, Roee  and
+Goldberg, Yoav},
+ booktitle = {Proc. of ACL},
+ doi = {10.18653/v1/P17-2021},
+ title = {Towards String-To-Tree Neural Machine Translation},
+ url = {https://www.aclweb.org/anthology/P17-2021},
+ year = {2017}
+}
+
 @inproceedings{akbik-blythe-vollgraf:2018:C18-1,
  abstract = {Recent advances in language modeling using recurrent neural networks have made it viable to model language as distributions over characters. By learning to predict the next character on the basis of previous characters, such models have been shown to automatically internalize linguistic concepts such as words, sentences, subclauses and even sentiment. In this paper, we propose to leverage the internal states of a trained character language model to produce a novel type of word embedding which we refer to as contextual string embeddings. Our proposed embeddings have the distinct properties that they (a) are trained without any explicit notion of words and thus fundamentally model words as sequences of characters, and (b) are contextualized by their surrounding text, meaning that the same word will have different embeddings depending on its contextual use. We conduct a comparative evaluation against previous embeddings and find that our embeddings are highly useful for downstream tasks: across four classic sequence labeling tasks we consistently outperform the previous state-of-the-art. In particular, we significantly outperform previous work on English and German named entity recognition (NER), allowing us to report new state-of-the-art F1-scores on the CoNLL03 shared task.},
  author = {Akbik, Alan  and  Blythe, Duncan  and  Vollgraf, Roland},
