--- a/shortdb.bib
+++ b/shortdb.bib
@@ -4743,3 +4743,9 @@ leveraging auto-segmented data.},
  year = {2016}
 }
 
+@report{gpt1,
+    author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
+    title = {Improving Language Understanding by Generative Pre-Training},
+    year = {2018}
+}
+
