--- a/db.bib
+++ b/db.bib
@@ -1618,15 +1618,6 @@ the official test run, which improved to 70.49 after bug fixes. We obtained the
  year = {2017}
 }
 
-@misc{devlin2018bert,
- archiveprefix = {arXiv},
- author = {Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
- eprint = {1810.04805},
- primaryclass = {cs.CL},
- title = {BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
- year = {2018}
-}
-
 @article{doi:10.1002/aris.1440380105,
  author = {Dumais, Susan T.},
  doi = {10.1002/aris.1440380105},
@@ -2755,7 +2746,7 @@ Ng, Hwee Tou},
  year = {2014}
 }
 
-@misc{li2019efficient,
+@unpublished{li2019efficient,
  archiveprefix = {arXiv},
  author = {Liunian Harold Li and Patrick H. Chen and Cho-Jui Hsieh and Kai-Wei Chang},
  eprint = {1902.11269},
@@ -3947,12 +3938,6 @@ Mikolov, Tomas},
  publisher = {Association for Computational Linguistics},
  title = {Design Challenges and Misconceptions in Named Entity Recognition},
  year = {2009}
-}
-
-@misc{Ratnaparkhi96amaximum,
- author = {Adwait Ratnaparkhi},
- title = {A Maximum Entropy Model for Part-Of-Speech Tagging},
- year = {1996}
 }
 
 @article{Reiter:1997:BAN:974487.974490,
