--- a/shortdb.bib
+++ b/shortdb.bib
@@ -3458,6 +3458,14 @@ Mikolov, Tomas},
  year = {2009}
 }
 
+@inproceedings{ratnaparkhi-1996-maximum,
+ author = {Ratnaparkhi, Adwait},
+ booktitle = {Proc. of EMNLP-1996},
+ title = {A Maximum Entropy Model for Part-Of-Speech Tagging},
+ url = {https://www.aclweb.org/anthology/W96-0213},
+ year = {1996}
+}
+
 @article{Reiter:1997:BAN:974487.974490,
  acmid = {974490},
  address = {New York, NY, USA},
@@ -4726,11 +4734,5 @@ leveraging auto-segmented data.},
  title = {Segment-Level Sequence Modeling using Gated Recursive Semi-Markov Conditional Random Fields},
  url = {http://www.aclweb.org/anthology/P16-1134},
  year = {2016}
-}
-
-@report{gpt1,
-    author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
-    title = {Improving Language Understanding by Generative Pre-Training},
-    year = {2018}
 }
 
