--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3083,6 +3083,14 @@ Mikolov, Tomas},
  year = {2009}
 }
 
+@inproceedings{ratnaparkhi-1996-maximum,
+ author = {Ratnaparkhi, Adwait},
+ booktitle = {Proc. of EMNLP},
+ title = {A Maximum Entropy Model for Part-Of-Speech Tagging},
+ url = {https://www.aclweb.org/anthology/W96-0213},
+ year = {1996}
+}
+
 @inproceedings{reimers-gurevych:2017:EMNLP2017,
  abstract = {In this paper we show that reporting a single performance score is insufficient
 to compare non-deterministic approaches. We demonstrate for common sequence
@@ -4160,11 +4168,5 @@ leveraging auto-segmented data.},
  title = {Segment-Level Sequence Modeling using Gated Recursive Semi-Markov Conditional Random Fields},
  url = {http://www.aclweb.org/anthology/P16-1134},
  year = {2016}
-}
-
-@report{gpt1,
-    author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
-    title = {Improving Language Understanding by Generative Pre-Training},
-    year = {2018}
 }
 
