--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2351,6 +2351,19 @@ with fewer features.},
  year = {2014}
 }
 
+@inproceedings{lee-etal-2018-higher,
+ abstract = {We introduce a fully-differentiable approximation to higher-order inference for coreference resolution. Our approach uses the antecedent distribution from a span-ranking architecture as an attention mechanism to iteratively refine span representations. This enables the model to softly consider multiple hops in the predicted clusters. To alleviate the computational cost of this iterative process, we introduce a coarse-to-fine approach that incorporates a less accurate but more efficient bilinear factor, enabling more aggressive pruning without hurting accuracy. Compared to the existing state-of-the-art span-ranking approach, our model significantly improves accuracy on the English OntoNotes benchmark, while being far more computationally efficient.},
+ author = {Lee, Kenton  and
+He, Luheng  and
+Zettlemoyer, Luke},
+ booktitle = {Proc. of the 2018 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 2 (Short Papers)},
+ doi = {10.18653/v1/N18-2108},
+ publisher = {ACL},
+ title = {Higher-Order Coreference Resolution with Coarse-to-Fine Inference},
+ url = {https://www.aclweb.org/anthology/N18-2108},
+ year = {2018}
+}
+
 @inproceedings{lee-he-zettlemoyer:2018:N18-2,
  abstract = {We introduce a fully-differentiable approximation to higher-order inference for coreference resolution. Our approach uses the antecedent distribution from a span-ranking architecture as an attention mechanism to iteratively refine span representations. This enables the model to softly consider multiple hops in the predicted clusters. To alleviate the computational cost of this iterative process, we introduce a coarse-to-fine approach that incorporates a less accurate but more efficient bilinear factor, enabling more aggressive pruning without hurting accuracy. Compared to the existing state-of-the-art span-ranking approach, our model significantly improves accuracy on the English OntoNotes benchmark, while being far more computationally efficient.},
  author = {Lee, Kenton  and  He, Luheng  and  Zettlemoyer, Luke},
