--- a/db.bib
+++ b/db.bib
@@ -2047,6 +2047,12 @@ graphs.},
  year = {2013}
 }
 
+@unpublished{gpt1,
+ author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
+ title = {Improving Language Understanding by Generative Pre-Training},
+ year = {2018}
+}
+
 @inproceedings{grenager-klein-manning:2005:ACL,
  address = {Ann Arbor, Michigan},
  author = {Grenager, Trond  and  Klein, Dan  and  Manning, Christopher},
