--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1684,6 +1684,12 @@ Michael Collins},
  year = {2016}
 }
 
+@unpublished{gpt1,
+ author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
+ title = {Improving Language Understanding by Generative Pre-Training},
+ year = {2018}
+}
+
 @inproceedings{grenager-klein-manning:2005:ACL,
  author = {Grenager, Trond  and  Klein, Dan  and  Manning, Christopher},
  booktitle = {Proc. of ACL},
