--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1830,6 +1830,12 @@ graphs.},
  year = {2013}
 }
 
+@unpublished{gpt1,
+ author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
+ title = {Improving Language Understanding by Generative Pre-Training},
+ year = {2018}
+}
+
 @inproceedings{grenager-klein-manning:2005:ACL,
  author = {Grenager, Trond  and  Klein, Dan  and  Manning, Christopher},
  booktitle = {Proc. of ACL-2005},
