--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1831,7 +1831,7 @@ graphs.},
 }
 
 @unpublished{gpt1,
- author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
+ author = {Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya},
  title = {Improving Language Understanding by Generative Pre-Training},
  year = {2018}
 }
