--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1685,7 +1685,7 @@ Michael Collins},
 }
 
 @unpublished{gpt1,
- author = {Alec Radford, Karthik Narasimhan, Tim Salimans, Ilya Sutskever},
+ author = {Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya},
  title = {Improving Language Understanding by Generative Pre-Training},
  year = {2018}
 }
