--- a/db.bib
+++ b/db.bib
@@ -1458,22 +1458,6 @@ Noah A. Smith},
  year = {2015}
 }
 
-@article{DBLP:journals/corr/MikolovSCCD13,
- author = {Tomas Mikolov and
-Ilya Sutskever and
-Kai Chen and
-Greg Corrado and
-Jeffrey Dean},
- bibsource = {dblp computer science bibliography, http://dblp.org},
- biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/MikolovSCCD13},
- journal = {CoRR},
- link = {http://arxiv.org/abs/1310.4546},
- timestamp = {Thu, 07 May 2015 20:02:01 +0200},
- title = {Distributed Representations of Words and Phrases and their Compositionality},
- volume = {abs/1310.4546},
- year = {2013}
-}
-
 @article{DBLP:journals/corr/MnihKSGAWR13,
  author = {Volodymyr Mnih and
 Koray Kavukcuoglu and
@@ -3361,6 +3345,17 @@ Vaswani, Ashish},
  publisher = {Curran Associates, Inc.},
  title = {ImageNet Classification with Deep Convolutional Neural Networks},
  year = {2012}
+}
+
+@incollection{NIPS2013_5021,
+ author = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+ booktitle = {Advances in Neural Information Processing Systems 26},
+ editor = {C. J. C. Burges and L. Bottou and M. Welling and Z. Ghahramani and K. Q. Weinberger},
+ pages = {3111--3119},
+ publisher = {Curran Associates, Inc.},
+ title = {Distributed Representations of Words and Phrases and their Compositionality},
+ url = {http://papers.nips.cc/paper/5021-distributed-representations-of-words-and-phrases-and-their-compositionality.pdf},
+ year = {2013}
 }
 
 @incollection{NIPS2013_5028,
