--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1198,20 +1198,6 @@ Dan Jurafsky},
  year = {2017}
 }
 
-@article{DBLP:journals/corr/MikolovSCCD13,
- author = {Tomas Mikolov and
-Ilya Sutskever and
-Kai Chen and
-Greg Corrado and
-Jeffrey Dean},
- bibsource = {dblp computer science bibliography, http://dblp.org},
- journal = {CoRR},
- timestamp = {Thu, 07 May 2015 20:02:01 +0200},
- title = {Distributed Representations of Words and Phrases and their Compositionality},
- volume = {abs/1310.4546},
- year = {2013}
-}
-
 @article{DBLP:journals/corr/MnihKSGAWR13,
  author = {Volodymyr Mnih and
 Koray Kavukcuoglu and
@@ -2661,6 +2647,15 @@ Vaswani, Ashish},
  pages = {1081--1088},
  title = {A Scalable Hierarchical Distributed Language Model},
  year = {2009}
+}
+
+@incollection{NIPS2013_5021,
+ author = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+ booktitle = {NIPS 26},
+ pages = {3111--3119},
+ title = {Distributed Representations of Words and Phrases and their Compositionality},
+ url = {http://papers.nips.cc/paper/5021-distributed-representations-of-words-and-phrases-and-their-compositionality.pdf},
+ year = {2013}
 }
 
 @incollection{NIPS2014_5346,
