--- a/db.bib
+++ b/db.bib
@@ -3160,6 +3160,20 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2016}
 }
 
+@inproceedings{miwa-bansal-2016-end,
+ address = {Berlin, Germany},
+ author = {Miwa, Makoto  and
+Bansal, Mohit},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ doi = {10.18653/v1/P16-1105},
+ month = {aug},
+ pages = {1105--1116},
+ publisher = {Association for Computational Linguistics},
+ title = {End-to-End Relation Extraction using {LSTM}s on Sequences and Tree Structures},
+ url = {https://www.aclweb.org/anthology/P16-1105},
+ year = {2016}
+}
+
 @inproceedings{Mnih:2007:TNG:1273496.1273577,
  acmid = {1273577},
  address = {New York, NY, USA},
