--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2763,6 +2763,17 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2016}
 }
 
+@inproceedings{miwa-bansal-2016-end,
+ author = {Miwa, Makoto  and
+Bansal, Mohit},
+ booktitle = {Proc. of ACL-2016},
+ doi = {10.18653/v1/P16-1105},
+ publisher = {ACL},
+ title = {End-to-End Relation Extraction using {LSTM}s on Sequences and Tree Structures},
+ url = {https://www.aclweb.org/anthology/P16-1105},
+ year = {2016}
+}
+
 @article{mnih2015human,
  author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
  journal = {Nature},
