--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3255,6 +3255,15 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2010}
 }
 
+@inproceedings{sha-pereira-2003-shallow,
+ author = {Sha, Fei  and
+Pereira, Fernando},
+ booktitle = {Proc. of the 2003 Human Language Technology Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
+ title = {Shallow Parsing with Conditional Random Fields},
+ url = {https://www.aclweb.org/anthology/N03-1028},
+ year = {2003}
+}
+
 @inproceedings{shen-EtAl:2016:P16-1,
  author = {Shen, Shiqi  and  Cheng, Yong  and  He, Zhongjun  and  He, Wei  and  Wu, Hua  and  Sun, Maosong  and  Liu, Yang},
  booktitle = {Proc. of ACL},
