--- a/db.bib
+++ b/db.bib
@@ -4116,6 +4116,16 @@ Mikolov, Tomas},
  year = {2010}
 }
 
+@inproceedings{sha-pereira-2003-shallow,
+ author = {Sha, Fei  and
+Pereira, Fernando},
+ booktitle = {Proceedings of the 2003 Human Language Technology Conference of the North {A}merican Chapter of the Association for Computational Linguistics},
+ pages = {213--220},
+ title = {Shallow Parsing with Conditional Random Fields},
+ url = {https://www.aclweb.org/anthology/N03-1028},
+ year = {2003}
+}
+
 @inproceedings{shen-EtAl:2016:P16-1,
  address = {Berlin, Germany},
  author = {Shen, Shiqi  and  Cheng, Yong  and  He, Zhongjun  and  He, Wei  and  Wu, Hua  and  Sun, Maosong  and  Liu, Yang},
