--- a/tinydb.bib
+++ b/tinydb.bib
@@ -20,6 +20,18 @@ and Clark, Peter E.},
  year = {2009}
 }
 
+@inproceedings{5372916,
+ author = {G. {Zweig} and P. {Nguyen}},
+ booktitle = {2009 IEEE Workshop on Automatic Speech Recognition Understanding},
+ doi = {10.1109/ASRU.2009.5372916},
+ issn = {},
+ keywords = {hidden Markov models;speech recognition;continuous speech recognition;segmental conditional random field;acoustic detectors;segment-level features;decoding;formant trajectories;duration;syllable stress patterns;hidden Markov models;Bing mobile;Vocabulary;Speech recognition;Acoustic signal detection;Detectors;Hidden Markov models;Power system modeling;Dynamic programming;Decoding;Stress;Computer vision;speech recognition;conditional random field;direct modeling;detector features},
+ number = {},
+ title = {A segmental CRF approach to large vocabulary continuous speech recognition},
+ volume = {},
+ year = {2009}
+}
+
 @article{6936866,
  author = {W. {Chen} and M. {Zhang} and Y. {Zhang}},
  doi = {10.1109/TASLP.2014.2365359},
@@ -2664,7 +2676,6 @@ Vaswani, Ashish},
  booktitle = {NIPS 26},
  pages = {3111--3119},
  title = {Distributed Representations of Words and Phrases and their Compositionality},
- url = {http://papers.nips.cc/paper/5021-distributed-representations-of-words-and-phrases-and-their-compositionality.pdf},
  year = {2013}
 }
 
